# snake-game

./: .gitignore  CMakeLists.txt  README.md
include/: Entity.h  LTexture.h  Player.h  apple.h  entity.h  game.h  init_sdl.h  load_media.h  main.h  movements.h  player.h
src/: Entity.cpp  LTexture.cpp  Player.cpp  entity.cpp  game.cpp  init_sdl.cpp  load_media.cpp  main.cpp
